Bug 347712 - Use shared AST in ExtractLocalVariableRefactoring.