@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2008, 2011 Institute for Software, HSR Hochschule fuer Technik  
+ * Copyright (c) 2008, 2012 Institute for Software, HSR Hochschule fuer Technik  
  * Rapperswil, University of applied sciences and others
  * All rights reserved. This program and the accompanying materials 
  * are made available under the terms of the Eclipse Public License v1.0 
@@ -8,6 +8,7 @@
  *  
  * Contributors: 
  *     Institute for Software - initial API and implementation
+ *     Sergey Prigogin (Google)
  *******************************************************************************/
 package org.eclipse.cdt.ui.tests.refactoring.hidemethod;
 
@@ -15,22 +16,17 @@ import java.util.Collection;
 import java.util.Properties;
 
 import org.eclipse.core.resources.IFile;
-import org.eclipse.ltk.core.refactoring.Change;
-import org.eclipse.ltk.core.refactoring.RefactoringStatus;
+import org.eclipse.ltk.core.refactoring.Refactoring;
 
 import org.eclipse.cdt.ui.tests.refactoring.RefactoringTest;
 import org.eclipse.cdt.ui.tests.refactoring.TestSourceFile;
 
-import org.eclipse.cdt.internal.ui.refactoring.CRefactoring;
 import org.eclipse.cdt.internal.ui.refactoring.hidemethod.HideMethodRefactoring;
 
 /**
  * @author Guido Zgraggen IFS
  */
 public class HideMethodRefactoringTest extends RefactoringTest {
-	private int warnings;
-	private int errors;
-	private int fatalerrors;
 	
 	public HideMethodRefactoringTest(String name, Collection<TestSourceFile> files) {
 		super(name, files);
@@ -39,32 +35,15 @@ public class HideMethodRefactoringTest extends RefactoringTest {
 	@Override
 	protected void runTest() throws Throwable {
 		IFile refFile = project.getFile(fileWithSelection);
-		CRefactoring refactoring = new HideMethodRefactoring(refFile,selection, null, cproject);
-		RefactoringStatus checkInitialConditions = refactoring.checkInitialConditions(NULL_PROGRESS_MONITOR);
-		if (errors > 0) {
-			assertConditionsError(checkInitialConditions, errors);
-		} else if (fatalerrors > 0) {
-			assertConditionsError(checkInitialConditions, errors);
-			return;
-		} else {
-			assertConditionsOk(checkInitialConditions);
-		}
-
-		Change createChange = refactoring.createChange(NULL_PROGRESS_MONITOR);
-		RefactoringStatus finalConditions = refactoring.checkFinalConditions(NULL_PROGRESS_MONITOR);
-		if (warnings > 0) {
-			assertConditionsWarning(finalConditions, warnings);
-		} else {
-			assertConditionsOk(finalConditions);
-		}
-		createChange.perform(NULL_PROGRESS_MONITOR);
+		Refactoring refactoring = new HideMethodRefactoring(refFile,selection, null, cproject);
+		executeRefactoring(refactoring);
 		compareFiles(fileMap);
 	}
 
 	@Override
 	protected void configureRefactoring(Properties refactoringProperties) {
-		warnings = new Integer(refactoringProperties.getProperty("warnings", "0")).intValue();  //$NON-NLS-1$//$NON-NLS-2$
-		errors = new Integer(refactoringProperties.getProperty("errors", "0")).intValue();  //$NON-NLS-1$//$NON-NLS-2$
-		fatalerrors = new Integer(refactoringProperties.getProperty("fatalerrors", "0")).intValue();  //$NON-NLS-1$//$NON-NLS-2$
+		fatalError = Boolean.valueOf(refactoringProperties.getProperty("fatalerror", "false")).booleanValue();  //$NON-NLS-1$//$NON-NLS-2$
+		finalWarnings = new Integer(refactoringProperties.getProperty("warnings", "0")).intValue();  //$NON-NLS-1$//$NON-NLS-2$
+		initialErrors = new Integer(refactoringProperties.getProperty("errors", "0")).intValue();  //$NON-NLS-1$//$NON-NLS-2$
 	}
 }
